--- a/environment.yml
+++ b/environment.yml
@@ -6,7 +6,6 @@ dependencies:
   - atk-1.0=2.36.0
   - ca-certificates=2021.5.30
   - cairo=1.16.0
-  - certifi=2021.5.30
   - expat=2.4.1
   - font-ttf-dejavu-sans-mono=2.37
   - font-ttf-inconsolata=3.000
@@ -21,150 +20,152 @@ dependencies:
   - gettext=0.19.8.1
   - giflib=5.2.1
   - graphite2=1.3.13
-  - graphviz=2.47.3
+  - graphviz=2.49.0
   - gtk2=2.24.33
   - gts=0.7.6
-  - harfbuzz=2.8.2
+  - harfbuzz=2.9.1
   - icu=68.1
   - jbig=2.1
   - jpeg=9d
   - lerc=2.2.1
-  - libcxx=11.1.0
+  - libcxx=12.0.1
   - libdeflate=1.7
-  - libffi=3.3
+  - libffi=3.4.2
   - libgd=2.3.2
-  - libglib=2.68.3
+  - libglib=2.68.4
   - libiconv=1.16
   - libpng=1.6.37
   - librsvg=2.50.7
   - libtiff=4.3.0
   - libtool=2.4.6
-  - libwebp=1.2.0
-  - libwebp-base=1.2.0
+  - libwebp=1.2.1
+  - libwebp-base=1.2.1
   - libxml2=2.9.12
   - lz4-c=1.9.3
   - ncurses=6.2
-  - openssl=1.1.1k
-  - pango=1.48.7
+  - openssl=1.1.1l
+  - pango=1.48.10
   - pcre=8.45
-  - pip=21.1.3
+  - pip=21.2.4
   - pixman=0.40.0
   - pygraphviz=1.7
-  - python=3.8.10
+  - python=3.8.12
   - python_abi=3.8
   - readline=8.1
-  - setuptools=49.6.0
+  - setuptools=58.0.4
   - sqlite=3.36.0
-  - tk=8.6.10
-  - wheel=0.36.2
+  - tk=8.6.11
+  - wheel=0.37.0
   - xz=5.2.5
   - zlib=1.2.11
   - zstd=1.5.0
   - pip:
     - ansiwrap==0.8.4
-    - anyio==3.2.1
-    - appdirs==1.4.4
+    - anyio==3.3.1
     - appnope==0.1.2
-    - argon2-cffi==20.1.0
-    - async-generator==1.10
+    - argon2-cffi==21.1.0
     - attrs==21.2.0
     - autopep8==1.5.7
     - babel==2.9.1
     - backcall==0.2.0
-    - black==21.6b0
-    - bleach==3.3.0
+    - black==21.9b0
+    - bleach==4.1.0
+    - certifi==2021.5.30
     - cffi==1.14.6
-    - chardet==4.0.0
+    - charset-normalizer==2.0.6
     - click==8.0.1
     - cycler==0.10.0
-    - debugpy==1.3.0
-    - decorator==4.4.2
+    - debugpy==1.4.3
+    - decorator==5.1.0
     - defusedxml==0.7.1
     - entrypoints==0.3
-    - greenlet==1.1.0
-    - humanize==3.10.0
-    - idna==2.10
+    - greenlet==1.1.1
+    - humanize==3.11.0
+    - idna==3.2
+    - invoke==1.6.0
     - ipdb==0.13.9
-    - ipykernel==6.0.1
-    - ipython==7.25.0
+    - ipykernel==6.4.1
+    - ipython==7.27.0
     - ipython-genutils==0.2.0
     - jedi==0.18.0
     - jinja2==3.0.1
     - joblib==1.0.1
     - json5==0.9.6
     - jsonschema==3.2.0
-    - jupyter-client==6.1.12
-    - jupyter-core==4.7.1
-    - jupyter-server==1.9.0
-    - jupyterlab==3.0.16
+    - jupyter-client==7.0.3
+    - jupyter-core==4.8.1
+    - jupyter-server==1.11.0
+    - jupyterlab==3.1.12
     - jupyterlab-pygments==0.1.2
-    - jupyterlab-server==2.6.1
-    - jupytext==1.11.3
-    - kiwisolver==1.3.1
+    - jupyterlab-server==2.8.1
+    - jupytext==1.12.0
+    - kiwisolver==1.3.2
     - markdown-it-py==1.1.0
     - markupsafe==2.0.1
-    - matplotlib==3.4.2
-    - matplotlib-inline==0.1.2
+    - matplotlib==3.4.3
+    - matplotlib-inline==0.1.3
     - mdit-py-plugins==0.2.8
     - mistune==0.8.4
     - mypy-extensions==0.4.3
-    - nbclassic==0.3.1
-    - nbclient==0.5.3
+    - nbclassic==0.3.2
+    - nbclient==0.5.4
     - nbconvert==6.1.0
     - nbformat==5.1.3
     - nest-asyncio==1.5.1
-    - networkx==2.5.1
-    - notebook==6.4.0
-    - numpy==1.21.0
+    - networkx==2.6.3
+    - notebook==6.4.4
+    - numpy==1.21.2
     - packaging==21.0
-    - pandas==1.3.0
-    - pandocfilters==1.4.3
+    - pandas==1.3.3
+    - pandocfilters==1.5.0
     - papermill==2.3.3
     - parso==0.8.2
-    - pathspec==0.8.1
+    - pathspec==0.9.0
     - pexpect==4.8.0
     - pickleshare==0.7.5
-    - pillow==8.3.1
-    - ploomber==0.12.1
-    - ploomber-scaffold==0.2.1
+    - pillow==8.3.2
+    - platformdirs==2.3.0
+    - ploomber==0.12.8
+    - ploomber-scaffold==0.2.4
     - prometheus-client==0.11.0
-    - prompt-toolkit==3.0.19
+    - prompt-toolkit==3.0.20
     - ptyprocess==0.7.0
     - pycodestyle==2.7.0
     - pycparser==2.20
     - pydantic==1.8.2
     - pyflakes==2.3.1
-    - pygments==2.9.0
+    - pygments==2.10.0
     - pyparsing==2.4.7
     - pyrsistent==0.18.0
-    - python-dateutil==2.8.1
+    - python-dateutil==2.8.2
     - pytz==2021.1
     - pyyaml==5.4.1
-    - pyzmq==22.1.0
-    - regex==2021.7.6
-    - requests==2.25.1
+    - pyzmq==22.3.0
+    - regex==2021.8.28
+    - requests==2.26.0
     - requests-unixsocket==0.2.0
     - scikit-learn==0.24.2
-    - scipy==1.7.0
-    - send2trash==1.7.1
+    - scipy==1.7.1
+    - send2trash==1.8.0
     - six==1.16.0
     - sklearn-evaluation==0.5.6
     - sniffio==1.2.0
-    - sqlalchemy==1.4.20
-    - sqlparse==0.4.1
+    - sqlalchemy==1.4.23
+    - sqlparse==0.4.2
     - tabulate==0.8.9
-    - tenacity==8.0.0
-    - terminado==0.10.1
+    - tenacity==8.0.1
+    - terminado==0.12.1
     - testpath==0.5.0
     - textwrap3==0.9.2
     - threadpoolctl==2.2.0
     - toml==0.10.2
+    - tomli==1.2.1
     - tornado==6.1
-    - tqdm==4.61.2
-    - traitlets==5.0.5
-    - typing-extensions==3.10.0.0
+    - tqdm==4.62.2
+    - traitlets==5.1.0
+    - typing-extensions==3.10.0.2
     - urllib3==1.26.6
     - wcwidth==0.2.5
     - webencodings==0.5.1
-    - websocket-client==1.1.0
-prefix: /Users/Edu/miniconda3/envs/scipy-2021
+    - websocket-client==1.2.1
+prefix: /Users/Edu/miniconda3/envs/ploomber-workshop
