--- a/environment.yml
+++ b/environment.yml
@@ -87,6 +87,7 @@ dependencies:
     - ipykernel==6.4.1
     - ipython==7.27.0
     - ipython-genutils==0.2.0
+    - ipywidgets==7.6.5
     - jedi==0.18.0
     - jinja2==3.0.1
     - joblib==1.0.1
@@ -98,6 +99,7 @@ dependencies:
     - jupyterlab==3.1.12
     - jupyterlab-pygments==0.1.2
     - jupyterlab-server==2.8.1
+    - jupyterlab-widgets==1.0.2
     - jupytext==1.12.0
     - kiwisolver==1.3.2
     - markdown-it-py==1.1.0
@@ -146,6 +148,7 @@ dependencies:
     - requests-unixsocket==0.2.0
     - scikit-learn==0.24.2
     - scipy==1.7.1
+    - seaborn==0.11.2
     - send2trash==1.8.0
     - six==1.16.0
     - sklearn-evaluation==0.5.6
@@ -168,4 +171,5 @@ dependencies:
     - wcwidth==0.2.5
     - webencodings==0.5.1
     - websocket-client==1.2.1
+    - widgetsnbextension==3.5.1
 prefix: /Users/Edu/miniconda3/envs/ploomber-workshop
