adds soorgeon as dependency, updates index.md, adds sample notebook

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@ playground/pipeline.yaml
 playground/scripts
 playground/output
 playground/pipeline.png
+playground/tasks
+playground/exported.py
 example/output/
 
 # Byte-compiled / optimized / DLL files
