--- a/environment.yml
+++ b/environment.yml
@@ -50,13 +50,12 @@ dependencies:
   - pip=21.3.1
   - pixman=0.40.0
   - pygraphviz=1.7
-  - python=3.9.7
-  - python_abi=3.9
+  - python=3.8.12
+  - python_abi=3.8
   - readline=8.1
   - setuptools=59.4.0
   - sqlite=3.37.0
   - tk=8.6.11
-  - tzdata=2021e
   - wheel=0.37.0
   - xz=5.2.5
   - zlib=1.2.11
@@ -85,6 +84,7 @@ dependencies:
     - greenlet==1.1.2
     - humanize==3.13.1
     - idna==3.3
+    - importlib-resources==5.4.0
     - invoke==1.6.0
     - ipdb==0.13.9
     - ipykernel==6.6.0
@@ -175,4 +175,5 @@ dependencies:
     - webencodings==0.5.1
     - websocket-client==1.2.1
     - widgetsnbextension==3.5.2
+    - zipp==3.6.0
 prefix: /Users/Edu/miniconda3/envs/ploomber-workshop
